MenuExample/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_212\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample
-d
C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample\StringMethods1q.java
<---- end of javadoc command ---->
Loading source file C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample\StringMethods1q.java...
C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample\StringMethods1q.java:7: error: class, interface, or enum expected
public int sampleMethod(int y)
       ^
C:\Users\ttoriola026\Desktop\Chapter 5\MenuExample\StringMethods1q.java:11: error: class, interface, or enum expected
}
^
2 errors
